@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Added message Edit feature (#1483891, #1484440)
 - Fix message Etag generation for counter issues (#1485623)
 - Fix messages searching on MailEnable IMAP (#1485762)
 - Fixed many 'skip_deleted' issues (#1485634)
